--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,8 +12,9 @@
         android:layout_gravity="center"
         android:text="存入20000次数据" />
 
-    <EditText
-        android:id="@+id/edit"
+    <Button
+        android:id="@+id/btn1"
+        android:text="sp ANR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
